--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "CommonJS",
     "lib": ["ES2022"],
     "declaration": true,
+    "emitDeclarationOnly": true,
     "outDir": "./dist",
     "strict": true,
     "sourceMap": true,
