--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "verifactu-soap-client-nodejs",
   "version": "1.0.0",
   "description": "Client SOAP to communicate with VERI*FACTU",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node example/example.ts",
